feat(ia): integrar explicação de alerta com Gemini
Atualiza o AiExplanationService para utilizar a API Gemini na geração de explicações humanizadas para alertas de anomalia.

O service monta um prompt controlado a partir do contexto estruturado do alerta, incluindo sensor, grandeza medida, unidade, equipamentos afetados, tipo de equipamento, tipo de relação, severidade, limites estatísticos, score de desvio e possíveis causas calculadas pelo backend.
A IA generativa não decide se existe anomalia. A detecção continua sendo feita pela lógica estatística do sistema, baseada em baseline, limites e score de desvio. O Gemini é usado apenas para transformar esses dados técnicos em uma explicação mais clara para o usuário.
A implementação mantém fallback local caso a API Gemini esteja indisponível ou sem chave configurada, evitando que o endpoint de explicação quebre durante uso ou demonstrações.